--- a/Stylesheet/stylesheet.css
+++ b/Stylesheet/stylesheet.css
@@ -1,5 +1,6 @@
 *{
     text-decoration: none;
+    padding: 3px;
 }
 .heading{
     padding: 10px 0px;
@@ -7,18 +8,21 @@
     text-transform: uppercase;
     text-align: center;
     font-weight: bold;
-    letter-spacing: 4px;
-    color: white;
-    text-shadow: 0px 2px 3px black;
+    letter-spacing: 10px;
+    color: rgb(243, 240, 232);
+    text-shadow: 0px white;
 }
+
 .ins-box{
+    
     width: 100%;
     height: auto;
     margin: 15px auto;
     padding: 30px 10px;
-    border: 1px solid gray;
+    border: 1px solid silver;
     border-radius: 5px;
     text-align: center;
+    background-image: url('background.png');
     box-shadow: 0px 0px 2px 1px gray;
 }
 .v-set td, th{
@@ -37,9 +41,20 @@
     height: 100%;
     left: 0;
 }
+.button {
+    background-color: #ffaa01; /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer; 
+    
+  }
 .all-v-btn{
     padding: 8px;
     text-align: center;
+    background-color: rgb(199, 194, 194);
     position: fixed;
     bottom: 25px;
     right: 25px;   
@@ -54,5 +69,19 @@
 
 .g-signin2{
     width: 100%;
-    margin: 0 auto;
+    margin: auto;
 }
+.topright {
+    position: absolute;
+    top: 10px;
+    right: 16px;
+    font-size: 18px;
+    
+      }
+
+
+  
+   
+    
+    
+   
